# vtm

./: CMakeLists.txt  README.md  strassen.f90  strassen_blas.cpp  strassen_blas.f90  strassen_o.cpp  svd_lapack.cpp  svd_lapack.f90
5sem/: CMakeLists.txt  strassen.f90  strassen_blas.f90
5sem/python/: 2_5438120176664976787.ipynb  Untitled.ipynb  als.ipynb  als.py  problems_autumn_1.ipynb  sem1.ipynb  sem2.ipynb
5sem/python/problems_autumn_2/.ipynb_checkpoints/: problems_autumn_2-checkpoint.ipynb
6sem/: CMakeLists.txt  a.out  program  svt_task_1.f90  toom-cook-MPI.cpp  toom-cook.cpp
6sem/pyhon/: 1task.ipynb  Multiproc_demo.ipynb  a.out  library.cpp  mpi_toom.py  numba_parallel.ipynb  numbatask.py  task1.py  test.py
6sem/svt_f/: CMakeLists.txt  log.txt  main.f90  preamble.tex  table.aux  table.nav  table.tex  table.toc
6sem/svt_inmost/: CMakeLists.txt  inmost_task.cpp  table.aux  table.out  table.tex  table.toc
6sem/svt_mesh/: task.geo  task.vtk
7sem/svt/mke/: CMakeLists.txt  main.cpp  plot.ipynb
7sem/svt/mko/inm-prac-FV/inm-prac-FVM/: CMakeLists.txt  main.cpp
7sem/svt/mkr/: CMakeLists.txt  main.cpp  plot.ipynb
8sem/: TensorPrak.ipynb
EKF-project/: CMakeLists.txt  ekf.cpp  get_telemetry.cpp  pose_est.cpp  takeoff_and_land.cpp
EKF-project/Pose-Estimation-CPP/: 1.cpp  a.out  ekf.cpp  pinv.py  plot.py  script.sh
EKF-project/tmp/: GetData.py  RosDB.py  RosDB_ORIGINAL.py  ekf.py  main.py  main_ORIG_ALMOST.py  transformations.py
kursovaya/: Tuberculosis Spread Model.ipynb  data_age.xlsx  data_marriage.xlsx
tmp/: toom-cook.cpp
